# iksemel

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  NEWS  README  README.md  meson.build  meson_options.txt  pyproject.toml  setup.py  svn-commit.tmp
.github/workflows/: iksemel_basic.yml  iksemel_gnutls.yml  iksemel_openssl.yml  iksemel_python.yml  publish.yaml
include/: common.h  config.h.meson  iksemel.h  meson.build
python/: meson.build  pyiks.c
python/test/: attibutes.py  generate.py  meson.build
src/: dom.c  iks.c  iksemel.c  ikstack.c  jabber.pc.in  meson.build  pyiks.c  sax.c  tls-gnutls.c  tls-openssl.c  utility.c
test/: meson.build  tst-dom.c  tst-iks-utf8.c  tst-iks.c  tst-sax.c
tests/: traverse.py
tools/: ikslint.c  meson.build
