option('version',
       type : 'string',
       value : '1.6',
       description : 'Project version'
       )

option('package_name',
      type : 'string',
      value : '1.6',
      description : 'Project Name'
      )

option('package_url',
      type : 'string',
      value : 'https://github.com/Zaryob/iksemel',
      description : 'Project Url'
      )

option('package_bugreport_url',
      type : 'string',
      value : 'https://github.com/Zaryob/iksemel/issues',
      description : 'Project Url'
      )

option('with_tools',
      type : 'boolean',
      value : false,
      description : 'build with iksemel toolkit'
      )

# TLS of jabber is soo old. Due to the fact that disabled for a short term.
option('gnutls',
       type: 'feature',
       value: 'disabled',
       description: 'support for GnuTLS networking configration'
       )

option('openssl',
       type: 'feature',
       value: 'disabled',
       description: 'support for OpenSSL networking configration'
       )


option('with_python',
       type : 'boolean',
       value : false,
       description : 'build with python binding libraries'
       )

option('python',
       type : 'string',
       value : 'python3'
       )

option('tests',
      type : 'boolean',
      value : true,
      description : 'Control iksemel with UnitTests'
      )
